@@ -16,11 +16,11 @@ import com.group_finity.mascot.exception.CantBeAliveException;
 import java.awt.Point;
 
 /**
- * 
+ *
  * Maintains a list of mascot, the object to time.
- * 
+ * <p>
  * Original Author: Yuki Yamada of Group Finity
- * (http://www.group-finity.com/Shimeji/)
+ * (<a href="http://www.group-finity.com/Shimeji/">...</a>)
  * Currently developed by Shimeji-ee Group.
  */
 public class Manager {
@@ -35,21 +35,21 @@ public class Manager {
 	/**
 	 * A list of mascot.
 	 */
-	private final List<Mascot> mascots = new ArrayList<Mascot>();
+	private final List<Mascot> mascots = new ArrayList<>();
 
 	/**
 	 * The mascot will be added later.
 	 * (@Link ConcurrentModificationException) to prevent the addition of the mascot
 	 * (@link # tick ()) are each simultaneously reflecting.
 	 */
-	private final Set<Mascot> added = new LinkedHashSet<Mascot>();
+	private final Set<Mascot> added = new LinkedHashSet<>();
 
 	/**
 	 * The mascot will be added later.
 	 * (@Link ConcurrentModificationException) to prevent the deletion of the mascot
 	 * (@link # tick ()) are each simultaneously reflecting.
 	 */
-	private final Set<Mascot> removed = new LinkedHashSet<Mascot>();
+	private final Set<Mascot> removed = new LinkedHashSet<>();
 
 	private boolean exitOnLastRemoved = true;
 
@@ -76,7 +76,7 @@ public class Manager {
 				while (true) {
 					try {
 						Thread.sleep(Integer.MAX_VALUE);
-					} catch (final InterruptedException ex) {
+					} catch (final InterruptedException ignored) {
 					}
 				}
 			}
@@ -88,32 +88,29 @@ public class Manager {
 			return;
 		}
 
-		thread = new Thread() {
-			@Override
-			public void run() {
+		thread = new Thread(() -> {
 
-				long prev = System.nanoTime() / 1000000;
-				try {
-					for (;;) {
-						for (;;) {
-							final long cur = System.nanoTime() / 1000000;
-							if (cur - prev >= TICK_INTERVAL) {
-								if (cur > prev + TICK_INTERVAL * 2) {
-									prev = cur;
-								} else {
-									prev += TICK_INTERVAL;
-								}
-								break;
-							}
-							Thread.sleep(1, 0);
-						}
+            long prev = System.nanoTime() / 1000000;
+            try {
+                for (;;) {
+                    for (;;) {
+                        final long cur = System.nanoTime() / 1000000;
+                        if (cur - prev >= TICK_INTERVAL) {
+                            if (cur > prev + TICK_INTERVAL * 2) {
+                                prev = cur;
+                            } else {
+                                prev += TICK_INTERVAL;
+                            }
+                            break;
+                        }
+                        Thread.sleep(1, 0);
+                    }
 
-						tick();
-					}
-				} catch (final InterruptedException e) {
-				}
-			}
-		};
+                    tick();
+                }
+            } catch (final InterruptedException ignored) {
+            }
+        });
 		thread.setDaemon(false);
 
 		thread.start();
@@ -126,7 +123,7 @@ public class Manager {
 		thread.interrupt();
 		try {
 			thread.join();
-		} catch (InterruptedException e) {
+		} catch (InterruptedException ignored) {
 		}
 	}
 
@@ -160,7 +157,7 @@ public class Manager {
 		}
 
 		if (isExitOnLastRemoved()) {
-			if (this.getMascots().size() == 0) {
+			if (this.getMascots().isEmpty()) {
 				Main.getInstance().exit();
 			}
 		}
@@ -253,7 +250,7 @@ public class Manager {
 			// Find all mascots with matching imageSet, keep first one and dispose rest
 			List<Mascot> matching = getMascots().stream()
 					.filter(m -> m.getImageSet().equals(imageSet))
-					.collect(Collectors.toList());
+					.toList();
 
 			// Dispose all but the first matching mascot
 			matching.stream()
@@ -279,7 +276,7 @@ public class Manager {
 		synchronized (this.getMascots()) {
 			boolean isPaused = false;
 			if (!getMascots().isEmpty())
-				isPaused = getMascots().get(0).isPaused();
+				isPaused = getMascots().getFirst().isPaused();
 
 			// Use forEach with lambda for cleaner code
 			final boolean newPausedState = !isPaused;
@@ -289,7 +286,7 @@ public class Manager {
 
 	public boolean isPaused() {
 		synchronized (this.getMascots()) {
-			return !getMascots().isEmpty() && getMascots().get(0).isPaused();
+			return !getMascots().isEmpty() && getMascots().getFirst().isPaused();
 		}
 	}
 
@@ -325,7 +322,6 @@ public class Manager {
 	/**
 	 * Returns a Mascot with the given affordance.
 	 * 
-	 * @param affordance
 	 * @return A WeakReference to a mascot with the required affordance, or null
 	 */
 	public WeakReference<Mascot> getMascotWithAffordance(String affordance) {
